--- a/package.json
+++ b/package.json
@@ -6,41 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "fmt": "pnpm rome check . --apply-unsafe && pnpm rome format . --write"
+    "fmt": "rome check . --apply-unsafe && rome format . --write"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.0.1",
-    "@next/mdx": "^13.5.6",
-    "@types/react-modal": "^3.16.3",
-    "framer-motion": "^10.18.0",
-    "gray-matter": "^4.0.3",
-    "lucide-react": "^0.284.0",
-    "markdown-wasm": "^1.2.0",
-    "marked": "^11.2.0",
-    "next": "^14.2.11",
-    "pnpm": "^8.15.9",
+    "@mdx-js/loader": "3.0.1",
+    "@next/mdx": "15.5.2",
+    "framer-motion": "^12.23.12",
+    "gray-matter": "4.0.3",
+    "install": "^0.13.0",
+    "lucide-react": "^0.542.0",
+    "markdown-wasm": "1.2.0",
+    "marked": "15.0.11",
+    "next": "^15.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-modal": "^3.16.1",
-    "react-wrap-balancer": "^1.1.1",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-pretty-code": "^0.10.2",
-    "rehype-slug": "^6.0.0",
-    "remark-gfm": "3.0.1",
-    "typescript": "^5.6.2"
+    "react-modal": "3.16.3",
+    "react-wrap-balancer": "1.1.1",
+    "rehype-autolink-headings": "7.1.0",
+    "rehype-pretty-code": "0.14.0",
+    "rehype-slug": "6.0.0",
+    "remark-gfm": "4.0.0",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
     "@opentelemetry/api": "1.4.1",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^20.16.5",
-    "@types/react": "^18.3.6",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "postcss-nesting": "^12.1.5",
-    "tailwindcss": "^3.4.11",
-    "tailwindcss-debug-screens": "^2.2.1"
+    "@tailwindcss/line-clamp": "0.4.4",
+    "@tailwindcss/typography": "0.5.16",
+    "@types/node": "22.7.5",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
+    "@types/react-modal": "3.16.3",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.34.0",
+    "eslint-config-next": "15.5.2",
+    "postcss": "8.5.6",
+    "postcss-nesting": "12.1.5",
+    "tailwindcss": "3.4.17",
+    "tailwindcss-debug-screens": "2.2.1"
   },
   "pnpm": {
     "overrides": {
