--- a/package.json
+++ b/package.json
@@ -5,21 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "fmt": "rome check . --apply-unsafe && rome format . --write"
+    "start": "next start"
   },
   "dependencies": {
     "@mdx-js/loader": "3.0.1",
     "@next/mdx": "15.5.2",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "12.23.12",
     "gray-matter": "4.0.3",
-    "install": "^0.13.0",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "0.542.0",
     "markdown-wasm": "1.2.0",
     "marked": "15.0.11",
-    "next": "^15.5.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "15.5.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-modal": "3.16.3",
     "react-wrap-balancer": "1.1.1",
     "rehype-autolink-headings": "7.1.0",
