--- a/package.json
+++ b/package.json
@@ -2,55 +2,60 @@
   "name": "chronark.com",
   "version": "0.1.0",
   "private": true,
+  "browserslist": [
+    ">0.2%, defaults, fully supports es6-module"
+  ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "npx eslint .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "preview": "next build && npm run format && npm run format:check && npm run lint && next start"
   },
   "dependencies": {
-    "@mdx-js/loader": "3.0.1",
-    "@next/mdx": "15.5.2",
-    "framer-motion": "12.23.12",
-    "gray-matter": "4.0.3",
-    "lucide-react": "0.542.0",
-    "markdown-wasm": "1.2.0",
-    "marked": "15.0.11",
-    "next": "15.5.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-modal": "3.16.3",
-    "react-wrap-balancer": "1.1.1",
-    "rehype-autolink-headings": "7.1.0",
-    "rehype-pretty-code": "0.14.0",
-    "rehype-slug": "6.0.0",
-    "remark-gfm": "4.0.0",
-    "typescript": "5.6.3"
+    "@eslint/js": "^9.39.1",
+    "@mdx-js/loader": "^3.1.0",
+    "@next/mdx": "^16.0.7",
+    "@tailwindcss/typography": "^0.5.19",
+    "framer-motion": "^12.23.12",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.513.0",
+    "marked": "^15.0.11",
+    "next": "^16.0.10",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
-    "@opentelemetry/api": "1.4.1",
-    "@tailwindcss/line-clamp": "0.4.4",
-    "@tailwindcss/typography": "0.5.16",
-    "@types/node": "22.7.5",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1",
-    "@types/react-modal": "3.16.3",
-    "autoprefixer": "10.4.21",
-    "eslint": "9.34.0",
-    "eslint-config-next": "15.5.2",
-    "postcss": "8.5.6",
-    "postcss-nesting": "12.1.5",
-    "tailwindcss": "3.4.17",
-    "tailwindcss-debug-screens": "2.2.1"
+    "@eslint/eslintrc": "^3.3.3",
+    "@next/eslint-plugin-next": "^16.0.10",
+    "@tailwindcss/cli": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.2.1",
+    "@types/react-dom": "^19.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^16.5.0",
+    "lint-staged": "^16.2.7",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^4.1.8",
+    "typescript": "^5.8.3"
   },
-  "pnpm": {
-    "overrides": {
-      "@opentelemetry/api": "1.4.1",
-      "@opentelemetry/core": "1.13.0",
-      "@opentelemetry/exporter-trace-otlp-grpc": "0.39.1",
-      "@opentelemetry/resources": "1.13.0",
-      "@opentelemetry/sdk-trace-base": "1.13.0",
-      "@opentelemetry/sdk-trace-node": "1.13.0",
-      "@opentelemetry/semantic-conventions": "1.13.0"
-    }
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,mjs,cjs}": "next lint --fix",
+    "*.{js,jsx,ts,tsx,mjs,cjs,json,css,md,mdx,html,yml,yaml}": "prettier --write"
   }
 }
